force-app/main/default/objects/Settling_Parties__c/Settling_Parties__c.object-meta.xml
<CustomObject>
    <label>Settling Party</label>
    <nameField>
        <displayFormat>SP-{0}</displayFormat>
        <label>Settling Party ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settling Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>