force-app/main/default/objects/Settling_Parties__c/fields/AssesstmentId__c.field-meta.xml
<CustomField>
    <fullName>AssesstmentId__c</fullName>
    <formula>Liable_Party__r.Assessment_ID_Conga__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AssesstmentId</label>
    <type>Text</type>
</CustomField>