force-app/main/default/objects/Settling_Parties__c/fields/Liable_Party__c.field-meta.xml
<CustomField>
    <fullName>Liable_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Liable Party</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Liable_Party__c.Liability__r.Case_Management__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case_Management__c</valueField>
        </filterItems>
        <infoMessage>Choose &quot;All Fields&quot; and search for the liable party name.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Liable_Party__c</referenceTo>
    <relationshipLabel>Settling Parties</relationshipLabel>
    <relationshipName>Liability_Settlements</relationshipName>
    <type>Lookup</type>
</CustomField>