force-app/main/default/objects/Settling_Parties__c/fields/Proporrtionate_Wages_Assessed__c.field-meta.xml
<CustomField>
    <fullName>Proporrtionate_Wages_Assessed__c</fullName>
    <formula>Liable_Party__r.Proportionate_Wage_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount assessed due by this settling party</inlineHelpText>
    <label>Proporrtionate Wages Asessed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>