force-app/main/default/objects/Settling_Parties__c/fields/Settling_Party_Full_Output__c.field-meta.xml
<CustomField>
    <fullName>Settling_Party_Full_Output__c</fullName>
    <formula>Liable_Party__r.Case_Role_Entity_Full_Output__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settling Party Full Output</label>
    <type>Text</type>
</CustomField>