force-app/main/default/objects/Settling_Parties__c/fields/Settling_Party_Text_Name__c.field-meta.xml
<CustomField>
    <fullName>Settling_Party_Text_Name__c</fullName>
    <formula>Liable_Party__r.Liable_Party_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settling Party Text Name</label>
    <type>Text</type>
</CustomField>